<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBoxPreference
        android:title="@string/pref_show_bass_title"
        android:defaultValue="@bool/pref_show_bass_default"
        android:summaryOff="@string/pref_show_bass_hidden"
        android:summaryOn="@string/pref_show_bass_show"
        app:key="@string/pref_show_bass_key"/>

    <CheckBoxPreference
        android:title="Show Mid"
        android:defaultValue="@bool/pref_show_mid_default"
        app:key="pref_show_mid_key"
        android:summaryOn="Show"
        android:summaryOff="Hidden"/>

    <CheckBoxPreference
        android:title="Show Treble"
        android:defaultValue="@bool/pref_show_treble_default"
        app:key="pref_show_treble_key"
        android:summaryOn="Show"
        android:summaryOff="Hidden"/>

    <EditTextPreference
        android:key="show_size"
        android:defaultValue="1"
        android:title="Size" />

    <ListPreference
        android:title="Shape Color"
        android:summary="%s"
        android:defaultValue="0"
        app:key="@string/pref_color_key"
        android:entries="@array/pref_color_entries"
        android:entryValues="@array/pref_color_values"/>

</PreferenceScreen>